--- a/HomeworkTwo/res/values/strings.xml
+++ b/HomeworkTwo/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="button_hello">Hello!</string>
     <string name="button_bye">Goodbye!</string>
+    <string name="content">JPEG Image</string>
 
 </resources>
