--- a/PhotoViewer/res/values/strings.xml
+++ b/PhotoViewer/res/values/strings.xml
@@ -12,5 +12,7 @@
     
     <string name="location_button">button</string>
     <string name="snap">snapPic!</string>
+    
+    <string name="gridView_content">yup</string>
 
 </resources>
